close relevant bugs in debian/changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4816 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,7 @@ nvidia-graphics-drivers (340.24-1) UNRELEASED; urgency=medium
   * Refresh debian/patches/man-fixes-nvidia-smi.patch.
   * Add myself to Uploaders.
   * Add xorg-video-abi-18 as alternative dependency.
+    (Closes: #755020, #755138, #751082, #754828, #754251).
   * Update nv-readme.ids.
 
   [ Andreas Beckmann ]
