--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,7 @@ nvidia-graphics-drivers (340.24-1) UNRELEASED; urgency=medium
   * Add xorg-video-abi-18 as alternative dependency.
     (Closes: #755020, #755138, #751082, #754828, #754251).
   * Update nv-readme.ids.
+  * Update symbols control files.
 
   [ Andreas Beckmann ]
   * Merged from 331.79-1 and UNRELEASED prior to being branched out into
