new upstream release (340.32)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4853 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.32-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 340.32 (2014-08-12).
+
+ -- Vincent Cheng <vcheng@debian.org>  Sat, 16 Aug 2014 23:49:21 -0700
+
 nvidia-graphics-drivers (340.24-2) unstable; urgency=high
 
   * Fix FTBFS on armhf by not installing non-existent files. (Closes: #754621)
