refresh man-fixes-nvidia-smi.patch.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4857 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.32-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 340.32 (2014-08-12).
+  * Refresh debian/patches/man-fixes-nvidia-smi.patch.
 
  -- Vincent Cheng <vcheng@debian.org>  Sat, 16 Aug 2014 23:49:21 -0700
 
