--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (340.32-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 340.32 (2014-08-12).
   * Refresh debian/patches/man-fixes-nvidia-smi.patch.
+  * Update nv-readme.ids.
 
  -- Vincent Cheng <vcheng@debian.org>  Sat, 16 Aug 2014 23:49:21 -0700
 
