--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ nvidia-graphics-drivers (340.32-1) UNRELEASED; urgency=medium
   * Refresh debian/patches/man-fixes-nvidia-smi.patch and patches applied to
     nvidia-kernel-dkms.
   * Update nv-readme.ids.
+  * conftest.h: Implement new conftest.sh function acpi_op_remove.
 
  -- Vincent Cheng <vcheng@debian.org>  Sat, 16 Aug 2014 23:49:21 -0700
 
