finalize changelog for 340.32-1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4862 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.32-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.32-1) unstable; urgency=medium
 
   * New upstream long lived branch release 340.32 (2014-08-12).
     - Added support for the following GPUs:
