--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.32-2) UNRELEASED; urgency=medium
+
+  * libcuda1: Add Provides: libcuda-6.{0,5}-1{,-i386}.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 09 Sep 2014 15:40:24 +0200
+
 nvidia-graphics-drivers (340.32-1) unstable; urgency=medium
 
   * New upstream long lived branch release 340.32 (2014-08-12).
