--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ nvidia-graphics-drivers (340.32-2) UNRELEASED; urgency=medium
   [ Vincent Cheng ]
   * Unload uvm module when nvidia is unloaded. (Closes: #749018)
 
+  [ Beren Minor ]
+  * Fix DRM support activation in conftest.h. (Closes: #731265)
+
  -- Vincent Cheng <vcheng@debian.org>  Wed, 17 Sep 2014 00:56:16 -0700
 
 nvidia-graphics-drivers (340.32-1) unstable; urgency=medium
