--- a/debian/changelog
+++ b/debian/changelog
@@ -8,9 +8,11 @@ nvidia-graphics-drivers (340.32-2) UNRELEASED; urgency=medium
 
   [ Vincent Cheng ]
   * Unload uvm module when nvidia is unloaded. (Closes: #749018)
+  * Tighten conftest.h check for drm/drmP.h.
 
   [ Beren Minor ]
-  * Fix DRM support activation in conftest.h. (Closes: #731265)
+  * Fix DRM support activation in conftest.h. (Closes: #731265; possibly
+    fixes #756522 as well)
 
  -- Vincent Cheng <vcheng@debian.org>  Wed, 17 Sep 2014 00:56:16 -0700
 
