--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nvidia-graphics-drivers (340.32-2) UNRELEASED; urgency=medium
   * libcuda1: Add Provides: libcuda-6.{0,5}-1{,-i386}.
   * nvidia-detect: Legacy driver 173xx won't be available in jessie.
   * Merge changes from 304.123 (UNRELEASED).
+  * Bump Standards-Version to 3.9.6. No changes needed.
 
   [ Vincent Cheng ]
   * Unload uvm module when nvidia is unloaded. (Closes: #749018, #763272)
